src/JazLabs/hardware/digHolo/digHolo_v1.0.0/Examples/Matlab/digHolo.h

typedef float complex64;
typedef float complex64[2];
EXT_C int digHoloConfigSetAutoAlignGoalIdx(int handleIdx, int goalIdx);
EXT_C int digHoloConfigGetAutoAlignGoalIdx(int handleIdx);
EXT_C float digHoloAutoAlign(int handleIdx);
EXT_C float digHoloAutoAlignGetMetric(int handleIdx, int metricIdx);
EXT_C float* digHoloAutoAlignGetMetrics(int handleIdx, int metricIdx);
EXT_C int digHoloAutoAlignCalcMetrics(int handleIdx);
EXT_C int digHoloConfigSetBeamCentre(int handleIdx, int axisIdx, int polIdx, float centre);
EXT_C float digHoloConfigGetBeamCentre(int handleIdx, int axisIdx, int polIdx);
EXT_C int	digHoloConfigSetTilt(int handleIdx, int axisIdx, int polIdx, float tilt);
EXT_C float	digHoloConfigGetTilt(int handleIdx, int axisIdx, int polIdx);
EXT_C int digHoloConfigSetDefocus(int handleIdx, int polIdx, float defocus);
EXT_C float digHoloConfigGetDefocus(int handleIdx, int polIdx);
EXT_C int digHoloConfigSetPolLockTilt(int handleIdx, int polLock);
EXT_C int digHoloConfigGetPolLockTilt(int handleIdx);
EXT_C int digHoloConfigSetPolLockDefocus(int handleIdx, int polLock);
EXT_C int digHoloConfigGetPolLockDefocus(int handleIdx);
EXT_C int digHoloConfigSetPolLockBasisWaist(int handleIdx, int polLock);
EXT_C int digHoloConfigGetPolLockBasisWaist(int handleIdx);
EXT_C int digHoloConfigSetBasisGroupCount(int handleIdx, int groupCount);
EXT_C int digHoloConfigGetBasisGroupCount(int handleIdx);
EXT_C int digHoloConfigSetBasisWaist(int handleIdx, int polIdx, float waist);
EXT_C float digHoloConfigGetBasisWaist(int handleIdx, int polIdx);
EXT_C int digHoloConfigSetBasisTypeHG(int handleIdx);
EXT_C int digHoloConfigSetBasisTypeLG(int handleIdx);
EXT_C int digHoloConfigSetBasisTypeCustom(int handleIdx, int modeCountIn, int modeCountOut, complex64* transform);
EXT_C int digHoloConfigSetBasisType(int handleIdx, int basisType);
EXT_C int digHoloConfigGetBasisType(int handleIdx);
EXT_C complex64* digHoloProcessBatch(int handleIdx, int* batchCount, int* modeCount, int* polCount);