src/JazLabs/hardware/digHolo/digHolo_v1.0.0/src/digholoHeader.py


# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1128
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignGoalIdx", "cdecl"):
        continue
    digHoloConfigSetAutoAlignGoalIdx = _lib.get("digHoloConfigSetAutoAlignGoalIdx", "cdecl")
    digHoloConfigSetAutoAlignGoalIdx.argtypes = [c_int, c_int]
    digHoloConfigSetAutoAlignGoalIdx.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1136
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignGoalIdx", "cdecl"):
        continue
    digHoloConfigGetAutoAlignGoalIdx = _lib.get("digHoloConfigGetAutoAlignGoalIdx", "cdecl")
    digHoloConfigGetAutoAlignGoalIdx.argtypes = [c_int]
    digHoloConfigGetAutoAlignGoalIdx.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1152
for _lib in _libs.values():
    if not _lib.has("digHoloAutoAlign", "cdecl"):
        continue
    digHoloAutoAlign = _lib.get("digHoloAutoAlign", "cdecl")
    digHoloAutoAlign.argtypes = [c_int]
    digHoloAutoAlign.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1163
for _lib in _libs.values():
    if not _lib.has("digHoloAutoAlignGetMetric", "cdecl"):
        continue
    digHoloAutoAlignGetMetric = _lib.get("digHoloAutoAlignGetMetric", "cdecl")
    digHoloAutoAlignGetMetric.argtypes = [c_int, c_int]
    digHoloAutoAlignGetMetric.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1174
for _lib in _libs.values():
    if not _lib.has("digHoloAutoAlignGetMetrics", "cdecl"):
        continue
    digHoloAutoAlignGetMetrics = _lib.get("digHoloAutoAlignGetMetrics", "cdecl")
    digHoloAutoAlignGetMetrics.argtypes = [c_int, c_int]
    digHoloAutoAlignGetMetrics.restype = POINTER(c_float)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1185
for _lib in _libs.values():
    if not _lib.has("digHoloAutoAlignCalcMetrics", "cdecl"):
        continue
    digHoloAutoAlignCalcMetrics = _lib.get("digHoloAutoAlignCalcMetrics", "cdecl")
    digHoloAutoAlignCalcMetrics.argtypes = [c_int]
    digHoloAutoAlignCalcMetrics.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1205
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBeamCentre", "cdecl"):
        continue
    digHoloConfigSetBeamCentre = _lib.get("digHoloConfigSetBeamCentre", "cdecl")
    digHoloConfigSetBeamCentre.argtypes = [c_int, c_int, c_int, c_float]
    digHoloConfigSetBeamCentre.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1215
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetBeamCentre", "cdecl"):
        continue
    digHoloConfigGetBeamCentre = _lib.get("digHoloConfigGetBeamCentre", "cdecl")
    digHoloConfigGetBeamCentre.argtypes = [c_int, c_int, c_int]
    digHoloConfigGetBeamCentre.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1226
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetTilt", "cdecl"):
        continue
    digHoloConfigSetTilt = _lib.get("digHoloConfigSetTilt", "cdecl")
    digHoloConfigSetTilt.argtypes = [c_int, c_int, c_int, c_float]
    digHoloConfigSetTilt.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1236
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetTilt", "cdecl"):
        continue
    digHoloConfigGetTilt = _lib.get("digHoloConfigGetTilt", "cdecl")
    digHoloConfigGetTilt.argtypes = [c_int, c_int, c_int]
    digHoloConfigGetTilt.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1246
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetDefocus", "cdecl"):
        continue
    digHoloConfigSetDefocus = _lib.get("digHoloConfigSetDefocus", "cdecl")
    digHoloConfigSetDefocus.argtypes = [c_int, c_int, c_float]
    digHoloConfigSetDefocus.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1255
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetDefocus", "cdecl"):
        continue
    digHoloConfigGetDefocus = _lib.get("digHoloConfigGetDefocus", "cdecl")
    digHoloConfigGetDefocus.argtypes = [c_int, c_int]
    digHoloConfigGetDefocus.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1270
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetPolLockTilt", "cdecl"):
        continue
    digHoloConfigSetPolLockTilt = _lib.get("digHoloConfigSetPolLockTilt", "cdecl")
    digHoloConfigSetPolLockTilt.argtypes = [c_int, c_int]
    digHoloConfigSetPolLockTilt.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1282
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetPolLockTilt", "cdecl"):
        continue
    digHoloConfigGetPolLockTilt = _lib.get("digHoloConfigGetPolLockTilt", "cdecl")
    digHoloConfigGetPolLockTilt.argtypes = [c_int]
    digHoloConfigGetPolLockTilt.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1297
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetPolLockDefocus", "cdecl"):
        continue
    digHoloConfigSetPolLockDefocus = _lib.get("digHoloConfigSetPolLockDefocus", "cdecl")
    digHoloConfigSetPolLockDefocus.argtypes = [c_int, c_int]
    digHoloConfigSetPolLockDefocus.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1309
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetPolLockDefocus", "cdecl"):
        continue
    digHoloConfigGetPolLockDefocus = _lib.get("digHoloConfigGetPolLockDefocus", "cdecl")
    digHoloConfigGetPolLockDefocus.argtypes = [c_int]
    digHoloConfigGetPolLockDefocus.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1318
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetPolLockBasisWaist", "cdecl"):
        continue
    digHoloConfigSetPolLockBasisWaist = _lib.get("digHoloConfigSetPolLockBasisWaist", "cdecl")
    digHoloConfigSetPolLockBasisWaist.argtypes = [c_int, c_int]
    digHoloConfigSetPolLockBasisWaist.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1326
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetPolLockBasisWaist", "cdecl"):
        continue
    digHoloConfigGetPolLockBasisWaist = _lib.get("digHoloConfigGetPolLockBasisWaist", "cdecl")
    digHoloConfigGetPolLockBasisWaist.argtypes = [c_int]
    digHoloConfigGetPolLockBasisWaist.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1384
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBasisGroupCount", "cdecl"):
        continue
    digHoloConfigSetBasisGroupCount = _lib.get("digHoloConfigSetBasisGroupCount", "cdecl")
    digHoloConfigSetBasisGroupCount.argtypes = [c_int, c_int]
    digHoloConfigSetBasisGroupCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1393
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetBasisGroupCount", "cdecl"):
        continue
    digHoloConfigGetBasisGroupCount = _lib.get("digHoloConfigGetBasisGroupCount", "cdecl")
    digHoloConfigGetBasisGroupCount.argtypes = [c_int]
    digHoloConfigGetBasisGroupCount.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1404
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBasisWaist", "cdecl"):
        continue
    digHoloConfigSetBasisWaist = _lib.get("digHoloConfigSetBasisWaist", "cdecl")
    digHoloConfigSetBasisWaist.argtypes = [c_int, c_int, c_float]
    digHoloConfigSetBasisWaist.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1416
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetBasisWaist", "cdecl"):
        continue
    digHoloConfigGetBasisWaist = _lib.get("digHoloConfigGetBasisWaist", "cdecl")
    digHoloConfigGetBasisWaist.argtypes = [c_int, c_int]
    digHoloConfigGetBasisWaist.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1424
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBasisTypeHG", "cdecl"):
        continue
    digHoloConfigSetBasisTypeHG = _lib.get("digHoloConfigSetBasisTypeHG", "cdecl")
    digHoloConfigSetBasisTypeHG.argtypes = [c_int]
    digHoloConfigSetBasisTypeHG.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1435
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBasisTypeLG", "cdecl"):
        continue
    digHoloConfigSetBasisTypeLG = _lib.get("digHoloConfigSetBasisTypeLG", "cdecl")
    digHoloConfigSetBasisTypeLG.argtypes = [c_int]
    digHoloConfigSetBasisTypeLG.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1453
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBasisTypeCustom", "cdecl"):
        continue
    digHoloConfigSetBasisTypeCustom = _lib.get("digHoloConfigSetBasisTypeCustom", "cdecl")
    digHoloConfigSetBasisTypeCustom.argtypes = [c_int, c_int, c_int, POINTER(complex64)]
    digHoloConfigSetBasisTypeCustom.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1464
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetBasisType", "cdecl"):
        continue
    digHoloConfigSetBasisType = _lib.get("digHoloConfigSetBasisType", "cdecl")
    digHoloConfigSetBasisType.argtypes = [c_int, c_int]
    digHoloConfigSetBasisType.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1472
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetBasisType", "cdecl"):
        continue
    digHoloConfigGetBasisType = _lib.get("digHoloConfigGetBasisType", "cdecl")
    digHoloConfigGetBasisType.argtypes = [c_int]
    digHoloConfigGetBasisType.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1494
for _lib in _libs.values():
    if not _lib.has("digHoloProcessBatch", "cdecl"):
        continue
    digHoloProcessBatch = _lib.get("digHoloProcessBatch", "cdecl")
    digHoloProcessBatch.argtypes = [c_int, POINTER(c_int), POINTER(c_int), POINTER(c_int)]
    digHoloProcessBatch.restype = POINTER(complex64)
    break
